<resources>
    <string name="app_name" translatable="false">CartoMob</string>
    <string name="main_new_room_btn">New room</string>
    <string name="main_load_room_btn">Modify a room</string>
    <string name="main_load_save_btn">Load save</string>
    <string name="main_write_save_btn">Save</string>
    <string name="custom_dialog_name_title_room">Type a name for the room</string>
    <string name="custom_dialog_save_chooser_title">Choose a file to load</string>
    <string name="main_name_of_building_btn">Give a name to the building</string>
    <string name="main_visit_building_btn">Visit the building</string>
    <string name="main_number_of_rooms_zero">There is no rooms in this building</string>
    <string name="main_number_of_rooms">There is %1$d rooms in this building</string>
    <string name="custom_dialog_name_warning">Warning ! cannot create no named room !</string>
    <string name="custom_dialog_name_title_building">Type a name for the building</string>
    <string name="custom_dialog_room_chooser_title">Choose a room to load</string>
    <string name="ok">OK</string>
    <string name="roomActivity_add_photo">Add photo</string>
    <string name="to_north">To the north</string>
    <string name="to_west">To the west</string>
    <string name="to_south">To the south</string>
    <string name="to_east">To the east</string>
    <string name="direction_unknown">Direction is unknown</string>
    <string name="roomActivity_edit_photo">Edit the wall in front of you</string>
    <string name="custom_dialog_room_chooser_btn_create">Create a room</string>
    <string name="main_visit_building">Visit the building</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="custom_dialog_room_chooser_for_door_chooser_title">Where does this door lead?</string>
    <string name="room_chooser_adapter_nb_photos">%1$d photos on 4</string>
    <string name="room_complete">✅ Complete</string>
    <string name="room_incomplete">❌ Incomplete</string>
    <string name="roomActivity_N_wall_state">North wall : %1$s</string>
    <string name="roomActivity_E_wall_state">East wall : %1$s</string>
    <string name="roomActivity_S_wall_state">South wall : %1$s</string>
    <string name="roomActivity_W_wall_state">West wall : %1$s</string>
    <string name="complete" translatable="false">✅</string>
    <string name="incomplete" translatable="false">❌</string>
    <string name="wallActivity_reset_doors">Reset doors</string>
    <string name="pathfinding">Pathfinding</string>
    <string name="main_visit_building_short_path">Go the a room ?</string>
    <string name="short_path_arrived">You are arrived !</string>
    <string name="short_path_next_room">Go to the room %1$s</string>
</resources>