<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/custom_dialog_room_chooser_for_door_chooser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/custom_dialog_room_chooser_for_door_chooser_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/custom_dialog_room_chooser_for_door_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/custom_dialog_room_chooser_for_door_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

    <Button
        android:id="@+id/custom_dialog_room_chooser_for_door_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_room_chooser_btn_create" />
</LinearLayout>