<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RoomActivity">

    <TextView
        android:id="@+id/roomActivity_name_of_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/roomActivity_compass"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/roomActivity_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/roomActivity_compass"
        app:layout_constraintStart_toStartOf="@+id/roomActivity_compass"
        app:layout_constraintTop_toBottomOf="@+id/roomActivity_compass" />

    <Button
        android:id="@+id/roomActivity_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomActivity_add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/roomActivity_edit_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/roomActivity_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/roomActivity_edit_photo"/>

    <ImageView
        android:id="@+id/roomActivity_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/roomActivity_N_wall_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/roomActivity_N_wall_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomActivity_name_of_room" />

    <TextView
        android:id="@+id/roomActivity_E_wall_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomActivity_E_wall_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomActivity_N_wall_state" />

    <TextView
        android:id="@+id/roomActivity_S_wall_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomActivity_S_wall_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomActivity_E_wall_state" />

    <TextView
        android:id="@+id/roomActivity_W_wall_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomActivity_W_wall_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomActivity_S_wall_state" />

</androidx.constraintlayout.widget.ConstraintLayout>